# core-XToolbox

./: XToolbox_Win32_Beta.props  XToolbox_Win32_Debug.props  XToolbox_Win32_Release.props  XToolbox_Win64_Beta.props  XToolbox_Win64_Debug.props  XToolbox_Win64_Release.props  xtoolbox_base.xcconfig  xtoolbox_x64.xcconfig
Graphics/: VGraphics.h
Graphics/Projects/CMake/: CMakeLists.txt
Graphics/Projects/Visual/: Graphics.vcxproj  Graphics.vcxproj.filters
Graphics/Projects/Xcode/Graphics.xcodeproj/: project.pbxproj
Graphics/Sources/: ImageMeta.cpp  V4DPicture.cpp  V4DPicture.h  V4DPictureData.cpp  V4DPictureData.h  V4DPictureData_QDPicture.cpp  V4DPictureData_QDPicture.h  V4DPictureDecoder.cpp  V4DPictureIncludeBase.h  V4DPictureTools.cpp  VFont.cpp  VFont.h  VFontMgr.cpp  VFontMgr.h  VGifEncoder.cpp  VGifEncoder.h  VGraphicContext.cpp  VGraphicContext.h  VGraphicsFlags.h  VGraphicsTypes.h  VStyledTextBox.h  VTextLayout.cpp  VTextLayout.h  VWICCodec.cpp  XMacFont.cpp  XMacFont.h  XMacFontMgr.cpp  XMacFontMgr.h  XMacQuartzGraphicContext.cpp  XMacStyledTextBox.cpp  XMacStyledTextBox.h  XWinD2DGraphicContext.cpp  XWinD2DGraphicContext.h  XWinFont.cpp  XWinFont.h  XWinFontMgr.cpp  XWinFontMgr.h  XWinGDIGraphicContext.cpp  XWinGDIPlusGraphicContext.cpp  XWinIcon.cpp  (+1 more)
JSDebugger/Headers/: VChromeDbgHdlPage.h  VChromeDebugHandler.h  VRemoteDebugPilot.h
JSDebugger/Interfaces/: CJSWDebuggerFactory.h
JSDebugger/Sources/: JSWDebugger.cpp  VChromeDbgHdlPage.cpp  VChromeDebugHandler.cpp  VRemoteDebugPilot.cpp
JavaScript/: VJavaScript.h
JavaScript/Projects/CMake/: CMakeLists.txt
JavaScript/Projects/Visual/: JavaScript.vcxproj  JavaScript.vcxproj.filters
JavaScript/Projects/Xcode/JavaScript.xcodeproj/: project.pbxproj
JavaScript/Resources/cs.lproj/: Errors_javascript_CS.xlf
JavaScript/Resources/de.lproj/: Errors_javascript_DE.xlf
JavaScript/Resources/en.lproj/: Errors_javascript_EN.xlf
JavaScript/Resources/ja.lproj/: Errors_javascript_JA.xlf
JavaScript/Sources/: CurlWrapper.cpp  JS4D.cpp  JS4D.h  V4DContext.cpp  V4DContext.h  VJSBuffer.cpp  VJSClass.cpp  VJSClass.h  VJSConstructor.cpp  VJSContext.cpp  VJSContext.h  VJSCrypto.cpp  VJSEndPoint.cpp  VJSEnvironment.cpp  VJSEnvironment.h  VJSErrors.h  VJSEvent.cpp  VJSEventEmitter.cpp  VJSEventEmitter.h  VJSGlobalClass.cpp  VJSGlobalClass.h  VJSJSON.cpp  VJSJSON.h  VJSMIME.cpp  VJSMIME.h  VJSModule.cpp  VJSNet.cpp  VJSNetSocket.cpp  VJSParams.cpp  VJSParams.h  VJSProcess.cpp  VJSProcess.h  VJSRuntime_file.cpp  VJSStructuredClone.cpp  VJSStructuredClone.h  VJSSystemWorker.cpp  VJSSystemWorker.h  VJSValue.cpp  VJSValue.h  VJSW3CFileSystem.cpp  (+15 more)
Kernel/Projects/CMake/: CMakeLists.txt
Kernel/Projects/Visual/: Kernel.vcxproj
Kernel/Projects/Xcode/Kernel.xcodeproj/: project.pbxproj
Kernel/Resources/cs.lproj/: Errors_xbox_CS.xlf
Kernel/Resources/es.lproj/: Errors_xbox_ES.xlf
Kernel/Resources/pt-BR.lproj/: Errors_xbox_PT-BR.xlf
Kernel/Sources/: ILexer.h  ILexerInput.cpp  ILogger.h  IRefCountable.cpp  IRefCountable.h  IWatchable.cpp  IWatchable.h  VArray.h  VAssert.cpp  VAssert.h  VBlob.cpp  VBlob.h  VChecksumMD5.h  VDebugBlockInfo.cpp  VError.h  VErrorContext.h  VFile.cpp  VFile.h  VFilePath.cpp  VFileSystem.cpp  VIntlMgr.cpp  VJSONValue.cpp  VJSONValue.h  VKernelErrors.h  VKernelFlags.h  VKernelTypes.h  VLeaks.cpp  VMacStackCrawl.h  VMemoryBuffer.h  VMemoryCpp.cpp  VMemoryCpp.h  VMemoryImpl.cpp  VMemoryImpl.h  VProcess.cpp  VProgressIndicator.h  VRegexMatcher.h  VScrapKind.cpp  VScrapKind.h  VStream.cpp  VStream.h  (+48 more)
KernelIPC/Projects/CMake/: CMakeLists.txt
KernelIPC/Projects/Visual/: KernelIPC.vcxproj
KernelIPC/Projects/Xcode/KernelIPC.xcodeproj/: project.pbxproj
KernelIPC/Sources/: VCommandLineParser.cpp  VCommandLineParser.h  VCommandLineParserHelp.cpp  VCommandLineParserOption.cpp  VCommandLineParserOption.h  VComponentManager.cpp  VDaemon.cpp  VFileSystemNotification.cpp  VProcessIPC.cpp  VProcessLauncher.cpp  VProcessLauncher.h  VSignal.h  VSleepNotifier.cpp  VSleepNotifier.h  XPosixDaemon.cpp  XPosixProcessLauncher.cpp  XPosixProcessLauncher.h  XWinProcessLauncher.cpp  XWinProcessLauncher.h
ServerNet/Projects/CMake/: CMakeLists.txt
ServerNet/Projects/XCode/ServerNet.xcodeproj/: project.pbxproj
ServerNet/Resources/cs.lproj/: ServerNetCS.xlf
ServerNet/Resources/de.lproj/: ServerNetDE.xlf
ServerNet/Sources/: IKeyCertChainSource.h  SelectIO.cpp  ServerNetTypes.h  ServiceDiscovery.cpp  SslStub.cpp  SslStub.h  Tools.cpp  Tools.h  VEndPointStream.cpp  VHTTPClient.cpp  VHTTPClient.h  VHTTPMessage.cpp  VMIMEMessage.cpp  VMIMEMessage.h  VMIMEReader.cpp  VSockListener.cpp  VSslDelegate.cpp  VSslDelegate.h  VTCPEndPoint.cpp  VTCPEndPoint.h  VWebSocket.h  XBsdNetAddr.cpp  XBsdSocket.cpp
XML/Projects/CMake/: CMakeLists.txt
XML/Projects/Visual/: XML.vcxproj
XML/Sources/: IXMLDomWrapper.cpp  VCSSParser.cpp  VCSSParser.h  VLocalizationManager.cpp  VLocalizationManager.h  VLocalizationXMLHandler.cpp  VLocalizationXMLHandler.h
